<resources>
    <string name="app_name">Learn</string>

    <string name="companyname">LearnIt</string>
    <string name="Information">Information</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="uninstall">Uninstall</string>
    <string name="emailus">E-mail us at</string>
    <string name="email">boliakunal1991@gmail.com</string>
    <string name="Q1">Q.1) Do you like this quiz ?</string>
    <string name="Q2">Q.2) Do you like this course ?</string>
    <string name="Q3">Q.3) Do you like this university ?</string>
    <string name="Q4">Q.4) Do you understand the topic BullWhip effect ?</string>
    <string name="Q5">Q.5) Would you recommend this course to a friend ?</string>
    <string name="Q6">Q.6) Would you recommend this App to a friend ?</string>
    <string name="Q7">Q.7) Would you like to study some more ?</string>
    <string name="Q8">Q.8) Would you like to meet the developers ?</string>
    <string name="your_score">Your Score Is :</string>
    <string name="title_activity_linear">LinearActivity</string>
    <string name="title_activity_overallscore">overallscore</string>
</resources>
